Revision history for Server-Control

** denotes an incompatible change

0.10  Sep 18, 2009

- Add graceful and graceful-stop to apachectlp and Server::Control::Apache
- Add bin/serverctlp, a generic version of apachectlp with required --class
- Add --no-parse-config to apachectlp
- Fix -b option in apachectlp
- Add -I to CLI options

0.09  Sep 18, 2009

- Add Hash::MoreUtils to dependencies
- Fix rc file test (add terminating newline to yml)

0.08  Sep 17, 2009

- ** Rename root_dir to server_root - just more intuitive for existing apache users
- ** Rename run_command to run_system_command to avoid confusion with cli methods
- ** Overhaul command-line processing. Rename handle_cmdline to handle_cli and make much
     more comprehensive; can remove all logic from scripts like apachectlp and easily
     modify behavior of CLI in subclass
- Allow optional serverctl.yml file containing constructor options
- Add --quiet to CLI options to accompany --verbose
- Use MooseX::StrictConstructor everywhere

0.07  Sep 11, 2009

- Fix apachectlp --bind-addr, --error-log, etc options to actually take values
- Allow name to be overriden rather than description, and fix bug with default name

0.06  Sep 11, 2009

- Fix -d in apachectlp and add more specific usage errors
- Remove default of ARGV[0] from handle_cmdline

0.05  Aug 31, 2009

- Fix test_port_busy test to be more robust in killing temp server

0.04  Aug 27, 2009

- Use Unix::Lsof to try and determine who is listening to a port, report this in diagnostics
- Add Pod::Usage to dependencies
- Fix handling of relative paths given to apachectlp

0.03  Aug 25, 2009

- Add Hash::MoreUtils to dependencies
- Make Apache tests release-only, since they depend on httpd version, etc.
- Remove some unnecessary internal files

0.02  Aug 24, 2009

- Parse Apache config to determine server_root, port, bind_addr, error_log, and pid_file if not specified
- Add bin/apachectlp, a replacement for apachectl

0.01  Aug 21, 2009

- Initial version