@@ -9,9 +9,10 @@ use Net::Server;
 use POSIX qw(geteuid getegid);
 use Proc::ProcessTable;
 use Server::Control::Util
-  qw(kill_my_children is_port_active something_is_listening_msg);
+  qw(get_child_pids kill_my_children is_port_active something_is_listening_msg);
 use Test::Log::Dispatch;
 use Test::Most;
+use Time::HiRes;
 use strict;
 use warnings;
 
@@ -24,13 +25,14 @@ sub create_net_server_ctl {
 
     require Server::Control::NetServer;
     return Server::Control::NetServer->new(
-        net_server_class  => 'Net::Server::Fork',
+        net_server_class  => 'Net::Server::PreForkSimple',
         net_server_params => {
-            port     => $port,
-            pid_file => $temp_dir . "/server.pid",
-            log_file => $temp_dir . "/server.log",
-            user     => geteuid(),
-            group    => getegid()
+            max_servers => 2,
+            port        => $port,
+            pid_file    => $temp_dir . "/server.pid",
+            log_file    => $temp_dir . "/server.log",
+            user        => geteuid(),
+            group       => getegid()
         },
         %extra_params
     );
@@ -90,6 +92,37 @@ sub test_simple : Tests(8) {
     $ctl->stop();
     $log->contains_ok(qr/stopped/);
     ok( !$ctl->is_running(), "not running" );
+}
+
+sub test_refork : Tests(100) {
+    my $self = shift;
+    my $ctl  = $self->{ctl};
+
+    $ctl->start();
+    my $proc = $ctl->is_running();
+    ok( $proc, "is running" );
+
+    my @pids = wait_for_child_pids( $proc->pid );
+    ok( @pids >= 1, "at least one child pid" );
+    $ctl->refork();
+
+    my @pids2 = wait_for_child_pids( $proc->pid );
+    ok( @pids2 >= 1, "at least one child pid after refork" );
+    my %in_pids = map { ( $_, 1 ) } @pids;
+    ok( !grep { $in_pids{$_} } @pids2, "none of pids2 are in pids" );
+
+    $ctl->stop();
+    ok( !$ctl->is_running(), "not running" );
+}
+
+sub wait_for_child_pids {
+    my ($pid) = @_;
+    my @child_pids;
+    for ( my $count = 0 ; $count < 10 ; $count++ ) {
+        Time::HiRes::sleep(0.5);
+        last if @child_pids = get_child_pids($pid);
+    }
+    return @child_pids;
 }
 
 sub test_port_busy : Tests(3) {
