@@ -6,6 +6,7 @@ Revision history for Server-Control
 
 - Add graceful and graceful-stop to apachectlp and Server::Control::Apache
 - Add bin/serverctlp, a generic version of apachectlp with required --class
+- Add refork action, which sends a TERM to the child processes of the server's main process
 - Add --no-parse-config to apachectlp
 - Fix -b option in apachectlp
 - Add -I to CLI options
